--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,14 @@ body {
   float: left;
   font-size: 20px;
   font-weight: bold;
+  padding-left: 2%;
 }
 
 #header-nav {
   display: block;
   float: right;
   margin-top: 0;
+  padding-right: 2%;
 }
 
 #header-nav li {
@@ -65,6 +67,7 @@ body {
   min-width: 300px;
   display: inline-block;
   vertical-align: top;
+  padding: 2% 0;
 }
 
 a {
@@ -114,6 +117,8 @@ text-align: center;
 }
 
 .about-author img {
+  height: 150px;
+  width: 150px;
   border-radius: 50%;
 }
 
